--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ colorama = "^0.4.6"
 questionary = "^2.1.0"
 rich = "^13.9.4"
 langchain-google-genai = "^2.0.11"
+yfinance = "0.2.55"
+requests-ratelimiter = "0.7.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
